syntax = "proto3";
package blueprint;

message QStatement {
  string Text = 1;
  bool IsValid = 2;
  bool IsExplicit = 3;
  string Message = 4; // error message
  oneof Directives  {
    QImplicitCommands Implicit = 5;  // one or more
    QExplicitCommand Explicit  = 6;  // singleton
  }
}

message QExplicitCommand {
  string Text = 1;
  string Verb = 2;
  string Topic = 3;  // each command has a string identifier for help context (e.g. QSet & QClear & QGet all have the same help page of VAR)

  oneof Command {
    QHelp    Help    = 4;
    QGet     Set     = 5;
    QDelete  Delete  = 6;
    QExpand  Expand  = 7;
    QVersion Version = 8;
    QReview  Review  = 9;
    QExit    Exit    = 10;
  }
}
message QHelp {
  string Topic = 1;
}

message QGet {
  string Key = 1;
}

message QDelete {
  string Label = 1;
}

message QExpand {
  string Label = 1;
}

message QVersion {
  repeated string Args = 1;
}

message QReview {
  repeated string Args = 1;
  repeated QHistory History = 2;

  message QHistory {
    uint32 id = 1;
    string statement = 2;
  }
}

message QExit {
  repeated string Args = 1;
}

message QImplicitCommand {
  string Text = 1;
  string Verb = 2;
  string Topic = 3;  // each command has a string identifier for help context (e.g. QSet & QClear & QGet all have the same help page of VAR)

  oneof Command {
    QFind    Find    = 4;
    QFilter  Filter  = 5;
    QSet     Set     = 6;
    QClear   Clear   = 7;
    QMacro   Macro   = 8; // aka QLabel
    QExport  Export  = 9;
    QDisplay Display = 10;
    QInvoke  Invoke  = 11;
    QExec    Exec    = 12;
  }
}
message QFind {
  bool IsQuoted = 1;
  repeated QSearchSegment Segments = 2;

  message QSearchSegment {
    QSearchFragment Fragments = 1;
  }
  message QSearchFragment {
    QTerm Terms = 1;
  }
  message QTerm {
    string Text = 1;

    oneof Term {
      QWord    Lex     = 2;
      QMatch   Match   = 3; // Wildcard
      QLemma   Lemma   = 4;
      QPunc    Punc    = 5;
      QDecor   Decor   = 6;
      QPos     Pos     = 7;
      QLoc     Loc     = 8; // Positional/Location
    }
  }
  message QWord {
    uint32 WordKey = 1;
  }
  message QMatch {
    string Beginning = 1;
    string Ending = 2;
  }
  message QLemma {
    uint32 LemmaKey = 1;
  }
  message QPunc {
    uint32 Punctuation = 1;
  }
  message QDecor {
    uint32 Decoration = 1;
  }
  message QPos { // Part-of-Speech
    uint32 PnPos12 = 1;
    uint32 Pos32 = 2;
  }
  message QLoc { // Positional/Location
    uint32 Position = 1;
  }
}
message QFilter {
  string Scope = 1;
}

message QSet {
  string Key = 1;
  string Value = 2;
}

message QClear {
  string Key = 1;
}

message QMacro {
  string Label = 1;
}

message QExport {
}

message QDisplay {
  repeated uint32 Fields = 1;
}

message QInvoke {
  string Label = 1;
}

message QExec {
  uint32 command = 1;
}

message QImplicitCommands {
  repeated QImplicitCommand Items = 1;
}

// The service definition.
service ParseStatement {
  rpc Parse(ParseRequest) returns (ParseResponse) {}
}

message ParseRequest {
  string StatementText = 1;
}

message ParseResponse {
  string Input = 1;
  QStatement Output = 2;
  repeated string ErrorLines = 3;
}
